fix(zbugs): Fixing grid with logo alignment. Decreasing button radius. (#3766)
* Fixing grid alignment of logo, alignment with top bar. Decreasing button radius by half
* Minor adjustments to list view header and issue count positioning

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -32,6 +32,9 @@
   --color-tooltip-background: rgba(18, 18, 18, 1);
   --color-tooltip-outline: rgba(62, 62, 62, 1);
 
+  /* UI */
+  --ui-button-radius: 0.25rem;
+
   /* Filters */
   --filter-backdrop-blur: blur(6.5px);
 
@@ -96,7 +99,7 @@ textarea.autoResize {
   font-weight: var(--typo-label-weight);
   transition: opacity 0.3s ease-in-out;
   border: 1px solid var(--color-text-dimmed-label);
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   padding: 0.25rem 0.5rem;
 }
 
@@ -112,13 +115,14 @@ textarea.autoResize {
 }
 
 .logo-link-container {
+  padding: 0.229rem 0;
   flex: 0 0 auto;
 }
 
 .zero-logo {
   width: 100%;
   height: auto;
-  aspect-ratio: 5.915 / 1;
+  aspect-ratio: 5.875 / 1;
 }
 
 .zero-mark {
@@ -128,7 +132,7 @@ textarea.autoResize {
 .primary-cta {
   color: var(--color-text-primary-active);
   flex: 0 0 auto;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   background-color: var(--color-primary-cta);
   padding: 0.4rem 1.2rem;
   font-size: 1rem;
@@ -173,7 +177,7 @@ textarea.autoResize {
 
 .modal-confirm {
   color: var(--color-text-primary-active);
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   background-color: var(--color-primary-cta);
   padding: 0.4rem 1.2rem;
   font-size: 1rem;
@@ -205,7 +209,7 @@ textarea.autoResize {
 
 .nav-item {
   padding: 0.375rem 1rem;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
 }
 
 .nav-item:hover {
@@ -224,7 +228,7 @@ textarea.autoResize {
 
 .fps-meter {
   display: block;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   opacity: 0.3;
   width: 100%;
   margin-bottom: 2rem;
@@ -239,7 +243,7 @@ textarea.autoResize {
   font-weight: 800;
   opacity: 0.6;
   padding: 0.4rem 1.2rem;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   text-align: center;
   color: var(--color-text-primary-active);
   border: 1px solid var(--color-text-dimmed-label);
@@ -350,6 +354,11 @@ textarea.autoResize {
   margin: 0;
   display: flex;
   align-items: center;
+
+  .list-view-title {
+    position: relative;
+    top: -4px;
+  }
 }
 
 .list-view-header.search-mode {
@@ -411,6 +420,8 @@ textarea.autoResize {
   padding: 0.25rem 0.5rem;
   vertical-align: middle;
   margin-left: 1rem;
+  position: relative;
+  top: -2px;
 }
 
 /* Filtering */
@@ -470,6 +481,10 @@ textarea.autoResize {
 
 .filter-modal-item {
   position: relative;
+
+  input {
+    border-radius: var(--ui-button-radius);
+  }
 }
 
 .add-filter {
@@ -614,6 +629,11 @@ textarea.autoResize {
 
 .sidebar-item {
   margin-bottom: 2rem;
+
+  input,
+  button {
+    border-radius: var(--ui-button-radius);
+  }
 }
 
 .sidebar-item .timestamp-container span {
@@ -628,7 +648,7 @@ textarea.autoResize {
   text-align: left;
   width: 100%;
   padding: 0.8175rem;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   transition: color 0.3s ease;
   border: 1px solid var(--color-button-outline);
 }
@@ -707,7 +727,7 @@ textarea.autoResize {
   font-weight: var(--typo-label-weight);
   transition: opacity 0.3s ease-in-out;
   border: 1px solid var(--color-text-dimmed-label);
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   padding: 0.25rem 0.5rem;
 }
 
@@ -731,7 +751,7 @@ textarea.autoResize {
   border: 1px solid var(--color-nav-selected);
   display: block;
   width: 100%;
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   padding: 1rem;
 }
 
@@ -831,7 +851,7 @@ textarea.autoResize {
   font-weight: var(--typo-label-weight);
   transition: opacity 0.3s ease-in-out;
   border: 1px solid var(--color-text-dimmed-label);
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   padding: 0.25rem 0.5rem;
   display: block;
   margin: 0 auto 1rem;
@@ -849,7 +869,7 @@ textarea.autoResize {
   font-weight: var(--typo-label-weight);
   transition: opacity 0.3s ease-in-out;
   border: 1px solid var(--color-text-dimmed-label);
-  border-radius: 0.5rem;
+  border-radius: var(--ui-button-radius);
   padding: 0.25rem 0.5rem;
   display: inline-block;
   margin-top: 1rem;
